[package]
name = "user_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.65"
ordered-float = "4.2.0"
rbot = "0.1.2"

[lib]
crate-type = ["cdylib"]

